--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ x-n8n: &service-n8n
     - N8N_ENCRYPTION_KEY
     - N8N_USER_MANAGEMENT_JWT_SECRET
     - OLLAMA_HOST=${OLLAMA_HOST:-ollama:11434}
+    - N8N_RESTRICT_FILE_ACCESS_TO=/data/shared
+    - NODES_EXCLUDE=[]
   env_file:
     - path: .env
       required: true
