--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,10 @@ volumes:
   ollama_storage:
   qdrant_storage:
   docling_data:
+  npm_storage:
+  npm_db:
+  homarr_data:
+  pgadmin_data:
 
 networks:
   demo:
@@ -162,28 +166,54 @@ services:
           memory: 2g
 
   # ===========================================
-  # Nginx Reverse Proxy with SSL/TLS
+  # Nginx Proxy Manager - Reverse Proxy with SSL/TLS
   # ===========================================
-  # Reverse proxy for n8n with HTTPS support via self-signed certificates
-  # Access n8n at https://192.168.50.182
-  n8n-proxy:
-    image: nginx:alpine
-    hostname: n8n-proxy
-    container_name: n8n-proxy
+  # Web-based reverse proxy manager with SSL support
+  # Access admin dashboard at http://localhost:81
+  # Default credentials: admin@example.com / changeme
+  npm-db:
+    image: postgres:16-alpine
+    hostname: npm-db
+    container_name: npm-db
+    networks: ['demo']
+    restart: unless-stopped
+    environment:
+      - POSTGRES_DB=npm
+      - POSTGRES_USER=npm
+      - POSTGRES_PASSWORD=npm_password
+    volumes:
+      - npm_db:/var/lib/postgresql/data
+    deploy:
+      resources:
+        limits:
+          memory: 512m
+
+  npm:
+    image: 'jc21/nginx-proxy-manager:latest'
+    hostname: npm
+    container_name: npm
     networks: ['demo']
     restart: unless-stopped
     ports:
       - 80:80
       - 443:443
+      - 81:81
+    environment:
+      - DB_POSTGRES_HOST=npm-db
+      - DB_POSTGRES_PORT=5432
+      - DB_POSTGRES_USER=npm
+      - DB_POSTGRES_PASSWORD=npm_password
+      - DB_POSTGRES_NAME=npm
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./certs:/etc/nginx/certs:ro
+      - npm_storage:/data
+      - ./certs:/etc/letsencrypt
     depends_on:
+      - npm-db
       - n8n
     deploy:
       resources:
         limits:
-          memory: 500m
+          memory: 512m
 
   qdrant:
     image: qdrant/qdrant
@@ -201,34 +231,83 @@ services:
           memory: 2g
 
   # ===========================================
-  # Static File Server - Serves shared folder
+  # File Server - copyparty (Serves shared folder)
   # ===========================================
   # Access files at http://localhost:8080/
   # Example: http://localhost:8080/extracted-images/image_xxx.png
+  # Docs: https://github.com/9001/copyparty
   static-files:
-    image: nginx:alpine
+    image: copyparty/ac:latest
     hostname: static-files
     container_name: static-files
     networks: ['demo']
     restart: unless-stopped
     ports:
-      - 8080:80
+      - 8080:3923
     volumes:
-      - ./shared/extracted-images:/usr/share/nginx/html:ro
-    command: |
-      sh -c "echo 'server {
-        listen 80;
-        root /usr/share/nginx/html;
-        index chat.html;
-        autoindex on;
-        location / {
-          try_files \$$uri \$$uri/ =404;
-          add_header Access-Control-Allow-Origin *;
-        }
-      }' > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
+      - ./shared:/mnt/storage
+    command: ["-i", "0.0.0.0", "-p", "3923", "-v", "/mnt/storage:/:rw"]
     deploy:
       resources:
         limits:
+          memory: 1g
+
+  # ===========================================
+  # pgAdmin - PostgreSQL Database Management
+  # ===========================================
+  # Web-based PostgreSQL administration tool
+  # Access dashboard at http://localhost:5050
+  # Default credentials: admin@example.com / admin
+  # Add servers:
+  #   - Host: postgres, Port: 5432, User: root (for n8n database)
+  #   - Host: npm-db, Port: 5432, User: npm (for nginx-proxy-manager database)
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    hostname: pgadmin
+    container_name: pgadmin
+    networks: ['demo']
+    restart: unless-stopped
+    ports:
+      - 5050:80
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@example.com
+      - PGADMIN_DEFAULT_PASSWORD=admin
+      - PGADMIN_CONFIG_ENHANCED_COOKIE_PROTECTION=False
+      - PGADMIN_CONFIG_COOKIE_DEFAULT_SECURE=False
+      - PGADMIN_CONFIG_COOKIE_SAMESITE='Lax'
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+    deploy:
+      resources:
+        limits:
+          memory: 1g
+
+  # ===========================================
+  # Homarr - Self-hosted Dashboard
+  # ===========================================
+  # Customizable dashboard for managing containers
+  # Access dashboard at http://localhost:7575
+  # Docs: https://github.com/homarr-labs/homarr
+  homarr:
+    image: ghcr.io/homarr-labs/homarr:latest
+    hostname: homarr
+    container_name: homarr
+    networks: ['demo']
+    restart: unless-stopped
+    ports:
+      - 7575:7575
+    volumes:
+      - homarr_data:/appdata
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    environment:
+      - LOG_LEVEL=info
+      - SECRET_ENCRYPTION_KEY=9e5360b94e5d4ae7471bf6ed6befb4ec02db0d949e6e01075a5d245ce5e2ac90
+      - NODE_OPTIONS=--max-old-space-size=1024
+    deploy:
+      resources:
+        limits:
+          memory: 2g
+        reservations:
           memory: 1g
 
   ollama-cpu:
